<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/closetFragment"
        android:icon="@drawable/ic_closet"
        android:title="@string/nav_closet" />

    <item
        android:id="@+id/createFragment"
        android:icon="@drawable/ic_create"
        android:title="@string/nav_create" />

    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_community"
        android:title="@string/nav_community" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>